--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -1,13 +1,14 @@
-/* html {
+/* Reset to Border Box */
+html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
   box-sizing: inherit;
-} */
+}
 
 body {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: avenir;
 }
 
@@ -59,13 +60,17 @@ nav ul li a:visited:hover {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 800px;
   margin: auto;
 }
 
 .container__wide {
   max-width: 1200px;
   margin: auto;
+}
+
+img {
+  max-width: 100%;
 }
 
 footer {
