--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4,59 +4,49 @@ html {
 }
 *, *:before, *:after {
   box-sizing: inherit;
-}
-
-body {
   /* margin: 0;
   padding: 0; */
   font-family: avenir;
 }
 
-nav {
+.header-footer-container {
+  width: 1000px;
+  margin: 0 15px;
+}
+
+.navigation-bar {
   height: 60px;
   width: 100%;
-  background: black;
+  /* background: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.header-footer-container {
-  padding: 0px 30px;
+.navigation-bar__buttons {
+  display: flex;
+  justify-content: space-between;
 }
 
-@media screen and (max-width: 800px) {
-  .header-footer-container {
-    padding: 0px 0px;
-  }
+.navigation-bar nav {
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li.left {
-  float: left;
-  font-weight: 600;
-}
-
-nav ul li.right {
-  float: right;
-    font-weight: 500;
-}
-
-nav ul li a,
-nav ul li a:visited {
-  display: block;
-  padding: 0 20px;
-  line-height: 60px;
-  color: white;
+.navigation-bar a,
+.navigation-bar a:visited {
+  color: black;
   text-decoration: none;
   text-transform: uppercase;
+  font-weight: 500;
+  font-size: .9em;
 }
 
-nav ul li a:hover,
-nav ul li a:visited:hover {
-  color: grey;
+.navigation-bar a:hover,
+.navigation-bar a:visited:hover {
+  color: #BBBBBB;
+  transition-duration: .17s;
 }
 
 .container {
@@ -64,31 +54,18 @@ nav ul li a:visited:hover {
   margin: auto;
 }
 
-.container__wide {
-  max-width: 1200px;
-  margin: auto;
-}
-
-img {
-  max-width: 100%;
-}
-
-footer {
+#page-footer {
   height: 80px;
-  background-color: black;
-  color: white;
+  /* background-color: black; */
+  /* color: white; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-text {
-  float: right;
-  padding-top: 20px;
-  padding-right: 70px;
-  font-size: .8em;
-}
-
-#copyright {
-  float: right;
-}
-
-#footer-comment {
+  font-size: .9em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
