--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -3,17 +3,33 @@
   padding:0;
 }
 
-.introduction-container {
-    /* background-color: #F7F7F7; */
+.page-container {
+  height: calc(100vh + 60px);
+  /* display: flex;
+  align-items: center; */
+}
+
+.intro-container {
+  height: calc(100vh - 50px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .introduction {
   font-size: 1.5em;
-  margin: 70px 20px;
+  margin-bottom: 20vh;
+  padding: 0 40px;
+  max-width: 800px;
+}
+
+h1 {
+  font-family: 'Song Myung', serif;
 }
 
 .header-container {
-  padding: 0px 20px;
+  text-align: center;
 }
 
 .google-blue {color: #4285F4;}
@@ -28,7 +44,6 @@
 .project-container {
   border-style: solid;
   min-height: 300px;
-  padding: 10px 10px;
-  margin: 20px 20px;
-  background-color: white;
+  /* padding: 10px 10px;
+  margin: 20px 20px; */
 }
