--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -8,18 +8,22 @@ ul {
   padding-left: 5px;
 }
 
+
 figure {
+  display: table;
+  white-space: nowrap;
   max-width: 1000px;
   margin: auto;
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center; */
+  /* height: 105px; */
+  /* width: 100%; */
 }
 
-img {
-  display: float;
-  width: 20%;
-  /* max-width: 100%; */
-  object-fit: contain;
+.project-image {
+  /* vertical-align: middle; */
+  padding: 13px;
+  display: table-cell;
+}
+
+.project-image img {
+  max-width: 100%;
 }
