--- a/stylesheets/project.css
+++ b/stylesheets/project.css
@@ -3,19 +3,32 @@ p, h1, h2, h3, h4, h5, h6, ul {
   margin: auto;
 }
 
+h1, h2 {
+  font-family: 'Song Myung', serif;
+}
+
+h2 {
+  margin-top: 20px;
+}
+
+h3 {
+  margin-top: 15px;
+}
+
+p {
+  margin-top: 5px;
+}
+
 ul {
   list-style-position: inside;
   padding-left: 5px;
 }
 
-
 figure {
   display: table;
   white-space: nowrap;
   max-width: 1000px;
-  margin: auto;
-  /* height: 105px; */
-  /* width: 100%; */
+  margin: 30px auto;
 }
 
 figcaption {
