adjusted style of about page

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -75,7 +75,7 @@ h1 {
 
 .project-button:hover {
   transition-duration: .9s;
-  background-color: #EBEBEB;
+  background-color: #DADADA;
 }
 
 #pillar {
