--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -63,8 +63,8 @@ h1 {
 
 #page-footer {
   height: 80px;
-  /* background-color: black; */
-  /* color: white; */
+  /* background-color: black;
+  color: white; */
   display: flex;
   justify-content: center;
   align-items: center;
