--- a/stylesheets/work.css
+++ b/stylesheets/work.css
@@ -2,6 +2,12 @@ h1, h2 {
   text-align: center;
 }
 
+p {
+  font-size: .9em;
+  font-weight: 100;
+  color: grey;
+}
+
 a, a:visited {
   text-decoration: none;
   color: black;
